# gui-agent-skills

./: .gitignore  .gitmodules  LICENSE  PRINCIPLES.md  README.md  SKILL.md  pyproject.toml  run_osworld_task.py
_legacy/: workflow_runner.py
_legacy/workflows/: wechat_send_message.json
agentic/: __init__.py  function.py  meta_function.py
agentic/providers/: anthropic.py  gemini.py  openai.py
apps/: discord.json  telegram.json  wechat.json
benchmarks/osworld/: README.md  chrome.md  multi_apps.md  run_osworld_task.py
docs/: 1password.md  README_CN.md  agentic-programming.md  app-explore.md  core.md  messaging.md  vpn-reconnect.md
gui_harness/: __init__.py  constants.py  main.py  runtime.py
gui_harness/action/: __init__.py  gui_action.py  input.py
gui_harness/adapters/: vm_adapter.py
gui_harness/functions/: __init__.py  act.py  learn.py  navigate.py  observe.py  verify.py
gui_harness/memory/: app_memory.py
gui_harness/perception/: __init__.py  detector.py  ocr.py  screenshot.py  template_match.py
gui_harness/planning/: __init__.py  act.py  create.py  learn.py  navigate.py  observe.py  remember.py  verify.py
gui_harness/primitives/: __init__.py  detector.py  input.py  ocr.py  screenshot.py  template_match.py  vm_adapter.py
gui_harness/tasks/: __init__.py  execute_task.py  read_messages.py  send_message.py
harness/: __init__.py
harness/function/: __init__.py
harness/memory/: __init__.py
harness_functions/: functions.py  mcp_server.py
scenes/: 1password.yaml  README.md  _actions.yaml  app-explore.yaml  discord.yaml  messaging.yaml  telegram.yaml  vpn-reconnect.yaml
scripts/: agent.py  app_memory.py  gui_actions.sh  gui_agent.py  ocr_screen.sh  ocr_screen.swift  template_match.py  ui_detector.py  workflow_runner.py
(+13 files in other folders)
